--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter_bloc: ^6.1.1
   dio: ^3.0.10
+  youtube_player_flutter: ^7.0.0+7
   flutter:
     sdk: flutter
 
