--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   dio: ^3.0.10
   youtube_player_flutter: ^7.0.0+7
   bubble_bottom_bar: ^1.2.0
+  shared_preferences: ^0.5.12+4
+  provider: ^4.3.2+3
   flutter:
     sdk: flutter
 
