--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   bubble_bottom_bar: ^1.2.0
   shared_preferences: ^0.5.12+4
   provider: ^4.3.2+3
+  liquid_pull_to_refresh: ^2.0.0
   flutter:
     sdk: flutter
 
