--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   shared_preferences: ^0.5.12+4
   provider: ^4.3.2+3
   liquid_pull_to_refresh: ^2.0.0
+  shimmer: ^1.1.2
+  cached_network_image: ^2.2.0+1
   flutter:
     sdk: flutter
 
