--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   liquid_pull_to_refresh: ^2.0.0
   shimmer: ^1.1.2
   cached_network_image: ^2.2.0+1
+  local_auth: ^0.6.3+4
   flutter:
     sdk: flutter
 
