--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shimmer: ^1.1.2
   cached_network_image: ^2.2.0+1
   local_auth: ^0.6.3+4
+  smooth_page_indicator: ^0.2.0
   flutter:
     sdk: flutter
 
