--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   cached_network_image: ^2.2.0+1
   local_auth: ^0.6.3+4
   smooth_page_indicator: ^0.2.0
+  sqflite: ^1.3.2+1
+  path_provider: ^1.6.24
   flutter:
     sdk: flutter
 
